Kubernetes/Infrastructure/Ceph/ceph-rgw-s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: s3.ceph.homelab.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: s3.ceph.homelab.kbushby.com
  name: rook-ceph-s3
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  rules:
  - host: s3.ceph.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-rgw-ceph-objectstore
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - s3.ceph.homelab.kbushby.com
    secretName: s3-ceph-tls
